# LineraFlow-2

./: .env  .gitignore  App.tsx  README.md  data.txt  ex.sh  index.css  index.html  linera-marketplace-test.sh  marketplace-test.js  metadata.json  package-lock.json  package.json  pb_schema (2) (1).json  problem.txt  server.js  setup_production.sh  subscription-test.js  types.ts  vite-env.d.ts  vite.config.ts
components/: AlertPopup.tsx  CreatePostModal.tsx  CreateProductModal.tsx  CreatorDetail.tsx  CreatorExplorer.tsx  DebugConsole.tsx  DonationOverlay.tsx  Feed.tsx  LandingPage.tsx  LineraProvider.tsx  Marketplace.tsx  OrderFillModal.tsx  ParallelPulse.tsx  PrivateDataModal.tsx  ProductCard.tsx  ProductDetail.tsx  ProductList.tsx  ProfileEditor.tsx  RegistrationAlert.tsx  Sidebar.tsx  Statistics.tsx  StatsChart.tsx  WalletHUD.tsx  pocketbase.ts  useLinera.ts
deploy/: fix_nginx.sh  setup_production.sh
donations/: Cargo.toml
donations/src/: contract.rs  lib.rs  service.rs  state.rs
indexer/: index.js  package-lock.json  package.json
services/: geminiService.ts
utils/: CompositeSigner.ts  cacheManager.ts  sessionManager.ts
